# mic-vis

./: .gitignore  .loglogin  LICENSE  README.md  pyproject.toml  test_package.py
mic_vis/: __init__.py
mic_vis/bnp/: __init__.py  io.py  mda.py
mic_vis/common/: __init__.py  load_meta.py  load_xrf.py  plot.py  readMDA.py
mic_vis/s2idd/: __init__.py  mda.py  xrf_eaa.py
notebook/: proc_xrf_no_mda.ipynb
